[package]
name = "pscf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2"
defmt-rtt = "0.4"

#**
[dependencies.stm32f4xx-hal]
version = "0.17.1"
features = ["stm32f411"]






